examples/test/testpolicy14687.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14687
  namespace: namespace298
spec:
  podSelector:
    matchLabels:
      key24: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value21
      podSelector:
        matchLabels:
          key17: value34
          key47: value11
          key12: value14
